# ai-digest-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_digest_agent/: __init__.py  cli.py  config.py  sources.py  summarizer.py
tests/: test_summarizer.py
